package bwl.oo.paket3;

public class Hochschule extends Klassen {
    public Hochschule(){
        klasse = "Hochschule";
        instanzVariablenBeschriftung.add("Name");
    }
}









